--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello Mars</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ullam?</p>
+    <h2>Lorem ipsum dolor sit amet.</h2>
 </body>
 </html>
